[tool.poetry]
name = "karen-bot"
version = "0.1.0"
description = "SDSU CDT Discord Bot"
authors = ["Brandon Nguyen <gnuyent@protonmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
hikari = "^2.0.0-alpha.103"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
